deployment/web-app.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
  labels:
    app: spring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: spring-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  type: NodePort # External Service (Default: ClusterIP => internal service)
  selector:
    app: spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
